welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if(nums(i)==6&&pre=1){
                             ^array667:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		else if(nums(i)==7&&pre=1){
                                  ^