welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var pre=0
	var resultat=0
	for(i<-0 to nums.length-1){
		if(nums(i)==6&&pre=1){
			resultat=resultat+1
		}
		else if(nums(i)==7&&pre=1){
			resultat=resultat+1
		}
		if(nums(i)==6){
			pre = 1
		}
		else{
			pre = 0
		}
	}
	return resultat
}
